--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -7,7 +7,7 @@
                     <%if (lnks.length > 0) { %>
                     <% lnks.forEach(l => {%>
                     <div class="col-lg-4 col-sm-12 col-md-6 lnk">
-                        <a href="<%= l.link %>" target="_blank"><img src=<%= l.post + "media?size=l" %> class="img-fluid"
+                        <a href="<%= l.link %>" target="_blank"><img src=<%= l.thumbnail_url %> class="img-fluid"
                                 alt=""></a></div>
                     <% });%>
                     <%}%>
